窓見出しと行内地付き注記対応＋注記のルビ設定＋プリセット設定＋画面調整

--- a/presets/kobo_touch.ini
+++ b/presets/kobo_touch.ini
@@ -1,6 +1,6 @@
-#AozoraEpub3 Parameters - kobo glo
+#AozoraEpub3 Preset
 
-ProfileName=kobo glo
+PresetName=kobo Touch
 
 Ext=.kepub.epub
 
@@ -9,10 +9,10 @@ PageBreakSize=400
 PageBreakEmptySize=300
 PageBreakChapterSize=250
 
-DispW=758
-DispH=1024
-CoverW=758
-CoverH=1024
+DispW=600
+DispH=800
+CoverW=600
+CoverH=800
 
 MarkId=1
 Gaiji32=
