--- a/presets/reader.ini
+++ b/presets/reader.ini
@@ -1,6 +1,6 @@
-#AozoraEpub3 Parameters - Sony Reader T1/T2
+#AozoraEpub3 Preset
 
-ProfileName=Sony Reader T1/T2
+PresetName=Sony Reader T1/T2
 
 PageBreak=1
 PageBreakSize=300
