--- a/presets/kobo_glo.ini
+++ b/presets/kobo_glo.ini
@@ -1,6 +1,6 @@
-#AozoraEpub3 Parameters - kobo Touch
+#AozoraEpub3 Preset
 
-ProfileName=kobo Touch
+PresetName=kobo glo
 
 Ext=.kepub.epub
 
@@ -9,10 +9,10 @@ PageBreakSize=400
 PageBreakEmptySize=300
 PageBreakChapterSize=250
 
-DispW=600
-DispH=800
-CoverW=600
-CoverH=800
+DispW=758
+DispH=1024
+CoverW=758
+CoverH=1024
 
 MarkId=1
 Gaiji32=
