画像Zipの全画面表示用SVG画像タグ出力 Sony Reader T3用プリセット追加

--- a/presets/reader_t3.ini
+++ b/presets/reader_t3.ini
@@ -1,6 +1,6 @@
 #AozoraEpub3 Preset
 
-PresetName=Sony Reader T1/T2
+PresetName=Sony Reader T3
 PresetIcon=reader.png
 
 Ext=.epub
@@ -10,10 +10,10 @@ PageBreakSize=300
 PageBreakEmptySize=250
 PageBreakChapterSize=200
 
-DispW=584
-DispH=754
-CoverW=600
-CoverH=800
+DispW=738
+DispH=965
+CoverW=758
+CoverH=1024
 
 ImageSizeType=3
 FitImage=0
