--- a/presets/reader.ini
+++ b/presets/reader.ini
@@ -27,3 +27,9 @@ ResizeNumW=2048
 ResizeNumH=2048
 
 SpaceHyphenation=2
+
+PageMargin=0,0,0,0
+BodyMargin=1,0.5,0.5,0
+LineHeight=1.75
+FontSize=100
+BoldUseGothic=1
