--- a/presets/kobo_touch.ini
+++ b/presets/kobo_touch.ini
@@ -23,3 +23,9 @@ MarkId=1
 Gaiji32=
 
 SpaceHyphenation=1
+
+PageMargin=0,0.5,0,0
+BodyMargin=0,0,0,0
+LineHeight=1.75
+FontSize=100
+BoldUseGothic=0
