ReaderとKobo全画面は余白をhtmlのmarginで指定 vertical_font.css、horizontal_font_cssは利用するように戻す プリセット調整

--- a/presets/kindle_pw.ini
+++ b/presets/kindle_pw.ini
@@ -22,7 +22,9 @@ Gaiji32=1
 SpaceHyphenation=1
 
 PageMargin=0,0,0,0
+PageMarginUnit=0
 BodyMargin=0,0,0,0
+BodyMarginUnit=0
 LineHeight=1.5
 FontSize=100
 BoldUseGothic=0
