--- a/presets/kobo_glo.ini
+++ b/presets/kobo_glo.ini
@@ -25,7 +25,9 @@ Gaiji32=
 SpaceHyphenation=1
 
 PageMargin=0,0.5,0,0
+PageMarginUnit=0
 BodyMargin=0,0,0,0
-LineHeight=1.75
+BodyMarginUnit=0
+LineHeight=1.8
 FontSize=100
 BoldUseGothic=0
