--- a/presets/reader_t3.ini
+++ b/presets/reader_t3.ini
@@ -29,7 +29,9 @@ ResizeNumH=2048
 SpaceHyphenation=2
 
 PageMargin=0,0,0,0
+PageMarginUnit=0
 BodyMargin=1,0.5,0.5,0
-LineHeight=1.75
+BodyMarginUnit=0
+LineHeight=1.8
 FontSize=100
 BoldUseGothic=1
