--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,16 @@ sourceSets {
     }
 }
 dependencies {
-// https://mvnrepository.com/artifact/org.apache.velocity/velocity
-    implementation group: 'org.apache.velocity', name: 'velocity', version: '1.7'
-    // https://mvnrepository.com/artifact/commons-lang/commons-lang
-    implementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
+// https://mvnrepository.com/artifact/org.apache.velocity/velocity-engine-core
+    implementation group: 'org.apache.velocity', name: 'velocity-engine-core', version: '2.3'
+
+// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.7'
+// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.7'
+
     // https://mvnrepository.com/artifact/commons-collections/commons-collections
     implementation group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
     // https://mvnrepository.com/artifact/com.github.junrar/junrar
