--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,9 @@ dependencies {
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.7'
 // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.7'
+// https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
+    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
 
-    // https://mvnrepository.com/artifact/commons-collections/commons-collections
-    implementation group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
     // https://mvnrepository.com/artifact/com.github.junrar/junrar
     implementation group: 'com.github.junrar', name: 'junrar', version: '7.5.4'
     // https://mvnrepository.com/artifact/org.jsoup/jsoup
