--- a/.classpath
+++ b/.classpath
@@ -6,15 +6,15 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jai_codec.jar"/>
-	<classpathentry kind="lib" path="lib/jai_core.jar"/>
+	<classpathentry kind="lib" path="lib/commons-cli-1.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections4-4.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-compress-1.23.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.12.0.jar"/>
+	<classpathentry kind="lib" path="lib/jsoup-1.16.1.jar"/>
+	<classpathentry kind="lib" path="lib/junrar-7.5.4.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-simple-2.0.7.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-2.0.7.jar"/>
+	<classpathentry kind="lib" path="lib/velocity-engine-core-2.3.jar"/>
 	<classpathentry kind="lib" path="lib/juniversalchardet-2.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/commons-cli-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-collections-3.2.2.jar"/>
-	<classpathentry kind="lib" path="lib/commons-compress-1.21.jar"/>
-	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
-	<classpathentry kind="lib" path="lib/jsoup-1.14.3.jar"/>
-	<classpathentry kind="lib" path="lib/junrar-7.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/velocity-1.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
