--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'application'
 }
 
-mainClassName = 'AozoraEpub3'
+mainClassName = 'AozoraEpub3Applet'
 
 repositories {
     mavenCentral()
@@ -18,6 +18,24 @@ sourceSets {
         }
     }
 }
+jar {
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+    manifest {
+        attributes 'Main-Class': 'AozoraEpub3Applet'
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+/*
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '-Xlint:unchecked'
+}
+*/
+
 dependencies {
 // https://mvnrepository.com/artifact/org.apache.velocity/velocity-engine-core
     implementation group: 'org.apache.velocity', name: 'velocity-engine-core', version: '2.3'
