--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="lib/commons-cli-1.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-collections4-4.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-compress-1.23.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.12.0.jar"/>
 	<classpathentry kind="lib" path="lib/jsoup-1.16.1.jar"/>
 	<classpathentry kind="lib" path="lib/junrar-7.5.4.jar"/>
@@ -13,5 +16,6 @@
 	<classpathentry kind="lib" path="lib/velocity-engine-core-2.3.jar"/>
 	<classpathentry kind="lib" path="lib/juniversalchardet-2.4.0.jar"/>
 	<classpathentry kind="lib" path="lib/json-20231013.jar"/>
+	<classpathentry kind="lib" path="lib/commons-compress-1.25.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
